// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-airship destination: customEvents action - all fields 1`] = `
Array [
  Object {
    "body": Object {
      "interaction_type": "cdp",
      "name": "z8pnki8*ygwa",
      "properties": Object {
        "source": "Segment",
        "testType": "Z8PnKI8*YgWA",
      },
    },
    "occurred": false,
    "user": Object {
      "named_user_id": "Z8PnKI8*YgWA",
    },
  },
]
`;

exports[`Testing snapshot for actions-airship destination: customEvents action - required fields 1`] = `
Array [
  Object {
    "body": Object {
      "interaction_type": "cdp",
      "name": "z8pnki8*ygwa",
      "properties": Object {
        "source": "Segment",
      },
    },
    "occurred": false,
    "user": Object {
      "named_user_id": "Z8PnKI8*YgWA",
    },
  },
]
`;

exports[`Testing snapshot for actions-airship destination: manageTags action - all fields 1`] = `
Object {
  "audience": Object {
    "named_user_id": "XvmIpuaw",
  },
}
`;

exports[`Testing snapshot for actions-airship destination: manageTags action - required fields 1`] = `
Object {
  "audience": Object {
    "named_user_id": "XvmIpuaw",
  },
}
`;

exports[`Testing snapshot for actions-airship destination: setAttributes action - all fields 1`] = `
Object {
  "attributes": Array [
    Object {
      "action": "set",
      "key": "title",
      "timestamp": false,
      "value": "*N75*",
    },
    Object {
      "action": "set",
      "key": "first_name",
      "timestamp": false,
      "value": "*N75*",
    },
    Object {
      "action": "set",
      "key": "last_name",
      "timestamp": false,
      "value": "*N75*",
    },
    Object {
      "action": "set",
      "key": "full_name",
      "timestamp": false,
      "value": "*N75*",
    },
    Object {
      "action": "set",
      "key": "gender",
      "timestamp": false,
      "value": "*N75*",
    },
    Object {
      "action": "set",
      "key": "zipcode",
      "timestamp": false,
      "value": -8736782938013696,
    },
    Object {
      "action": "set",
      "key": "city",
      "timestamp": false,
      "value": "*N75*",
    },
    Object {
      "action": "set",
      "key": "region",
      "timestamp": false,
      "value": "*N75*",
    },
    Object {
      "action": "set",
      "key": "country",
      "timestamp": false,
      "value": "*N75*",
    },
    Object {
      "action": "set",
      "key": "birthdate",
      "timestamp": false,
      "value": "2021-02-01T00:00:00",
    },
    Object {
      "action": "set",
      "key": "age",
      "timestamp": false,
      "value": -8736782938013696,
    },
    Object {
      "action": "set",
      "key": "mobile_phone",
      "timestamp": false,
      "value": -8736782938013696,
    },
    Object {
      "action": "set",
      "key": "home_phone",
      "timestamp": false,
      "value": -8736782938013696,
    },
    Object {
      "action": "set",
      "key": "work_phone",
      "timestamp": false,
      "value": -8736782938013696,
    },
    Object {
      "action": "set",
      "key": "loyalty_tier",
      "timestamp": false,
      "value": "*N75*",
    },
    Object {
      "action": "set",
      "key": "company",
      "timestamp": false,
      "value": "*N75*",
    },
    Object {
      "action": "set",
      "key": "username",
      "timestamp": false,
      "value": "*N75*",
    },
    Object {
      "action": "set",
      "key": "account_creation",
      "timestamp": false,
      "value": "2021-02-01T00:00:00",
    },
    Object {
      "action": "set",
      "key": "email",
      "timestamp": false,
      "value": "ap@lecav.cz",
    },
    Object {
      "action": "set",
      "key": "altitude",
      "timestamp": false,
      "value": -8736782938013696,
    },
    Object {
      "action": "set",
      "key": "latitude",
      "timestamp": false,
      "value": -87367829380136.95,
    },
    Object {
      "action": "set",
      "key": "longitude",
      "timestamp": false,
      "value": -87367829380136.95,
    },
    Object {
      "action": "set",
      "key": "advertising_id",
      "timestamp": false,
      "value": "*N75*",
    },
  ],
  "audience": Object {
    "named_user_id": "*N75*",
  },
}
`;

exports[`Testing snapshot for actions-airship destination: setAttributes action - required fields 1`] = `
Object {
  "attributes": Array [],
  "audience": Object {
    "named_user_id": "*N75*",
  },
}
`;
